--- a/Demo/Meio.Autocomplete.Geo.html
+++ b/Demo/Meio.Autocomplete.Geo.html
@@ -9,6 +9,8 @@
 		<script language="javascript" type="text/javascript" src="../Assets/BGIframe.js"></script>
 		<script language="javascript" type="text/javascript" src="../Assets/Meio.Autocomplete.js"></script>
 		<script language="javascript" type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr&indexing=false"></script>
+		<script src="http://www.google.com/uds/api?file=uds.js&amp;v=1.0&amp;key=ABQIAAAAjU0EJWnWPMv7oQ-jjS7dYxQ82LsCgTSsdpNEnBsExtoeJv4cdBSUkiLH6ntmAr_5O4EfjDwOa0oZBQ" type="text/javascript"></script>
+
 		<script language="javascript" type="text/javascript" src="../Source/Meio.Autocomplete.Geo.js"></script>
 	</head>
 	<body>
@@ -37,18 +39,11 @@
 		
 		<script type="text/javascript">
 		//<![CDATA[
-			var latlng1 = new google.maps.LatLng(43.62538544065392, 7.011492675781259);
-			var latlng2 = new google.maps.LatLng(43.5895879439408, 7.104876464843759);
-			var bounds = new google.maps.LatLngBounds();
-			bounds.extend(latlng1);
-			bounds.extend(latlng2);
-
 			var geopleter = new Meio.Autocomplete.Geo('form_school', {
 				region: 'fr',
-				bounds: bounds,
 				location: new google.maps.LatLng(43.62028086118892, 7.043044841527948)
 			}, {
-				delay: 0
+				delay: 100
 			});
 		//]]>
 		</script>
