--- a/Demo/Meio.Autocomplete.Geo.html
+++ b/Demo/Meio.Autocomplete.Geo.html
@@ -10,8 +10,9 @@
 		<script language="javascript" type="text/javascript" src="../Assets/Meio.Autocomplete.js"></script>
 		<script language="javascript" type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr&indexing=false"></script>
 		<script src="http://www.google.com/uds/api?file=uds.js&amp;v=1.0&amp;key=ABQIAAAAjU0EJWnWPMv7oQ-jjS7dYxQ82LsCgTSsdpNEnBsExtoeJv4cdBSUkiLH6ntmAr_5O4EfjDwOa0oZBQ" type="text/javascript"></script>
-
 		<script language="javascript" type="text/javascript" src="../Source/Meio.Autocomplete.Geo.js"></script>
+
+		<link rel="stylesheet" type="text/css" href="meio.autocomplete.css"/>
 	</head>
 	<body>
 		<h1>Meio.Autocomplete.Geo demo</h1>
@@ -56,6 +57,11 @@
 				onSelect: function(elements, value) {
 					['lat', 'lng', 'city'].each(function(prop) {
 						$('form_' + prop).set('value', value[prop].toLowerCase().capitalize());
+					});
+				},
+				onDeselect: function(elements) {
+					['lat', 'lng', 'city'].each(function(prop) {
+						$('form_' + prop).set('value', '');
 					});
 				}
 			});
