--- a/Demo/Meio.Autocomplete.Geo.html
+++ b/Demo/Meio.Autocomplete.Geo.html
@@ -8,20 +8,25 @@
 		<script language="javascript" type="text/javascript" src="../Assets/mootools-1.2.4.4-more.js"></script>
 		<script language="javascript" type="text/javascript" src="../Assets/BGIframe.js"></script>
 		<script language="javascript" type="text/javascript" src="../Assets/Meio.Autocomplete.js"></script>
-		<script language="javascript" type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr&indexing=false"></script>
-		<script src="http://www.google.com/uds/api?file=uds.js&amp;v=1.0&amp;key=ABQIAAAAjU0EJWnWPMv7oQ-jjS7dYxQ82LsCgTSsdpNEnBsExtoeJv4cdBSUkiLH6ntmAr_5O4EfjDwOa0oZBQ" type="text/javascript"></script>
+		<script language="javascript" type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&indexing=false"></script>
+		<script src="http://www.google.com/uds/api?file=uds.js&amp;v=1.0&amp;key=ABQIAAAAjU0EJWnWPMv7oQ-jjS7dYxQ82LsCgTSsdpNEnBsExtoeJv4cdBSUkiLH6ntmAr_5O4EfjDwOa0oZBQ" type="text/javascript"></script> <!-- this key comes from the Google samples gallery. You have to put your own! -->
 		<script language="javascript" type="text/javascript" src="../Source/Meio.Autocomplete.Geo.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="meio.autocomplete.css"/>
+		<link rel="stylesheet" type="text/css" href="autocompleteGeoDemo.css"/>
 	</head>
 	<body>
 		<h1>Meio.Autocomplete.Geo demo</h1>
-			
+		<p>A geocompleter plugin by <a href="http://users.polytech.unice.fr/~ghibaudo/index_en.html">Matti Schneider-Ghibaudo</a>, based on the excellent <a href="http://www.meiocodigo.com/projects/meio-autocomplete/">Meio.Autocomplete</a> by <a href="http://www.meiocodigo.com/">Fábio M. Costa</a>, using the <a href="http://mootools.net">MooTools</a> JavaScript framework.</p>
+		
+		<h2>Rendering</h2>
+		<hr/>
+		<em>No idea? Try searching for the <strong>Musée du Louvre</strong>.</em>
 		<form action="#" method="post">
 			<ul>
 				<li>
-					<label for="form_school">Establishment</label>
-					<input type="text" name="form[school]" id="form_school" />
+					<label for="form_est">Establishment</label>
+					<input type="text" name="form[est]" id="form_est" />
 				</li>
 				<li>
 					<label for="form_city">City</label>
@@ -35,26 +40,37 @@
 					<label for="form_lng">Longitude</label>
 					<input type="text" name="form[lng]" id="form_lng" />
 				</li>
-				<li>
-					<label for="form_category">Environment</label>
-					<select name="form[category]" id="form_category">
-						<option value="urban">urban</option>
-						<option value="péri-urban">peri-urban</option>
-						<option value="extra-urban">extra-urban</option>
-					</select>
-				</li>
 			</ul>
-			<input type="submit" value="Enregistrer" />
 		</form>
+		
+		<h2>JS code</h2>
+		<hr/>
+		<code>
+			<pre>
+new Meio.Autocomplete.Geo('form_est', {
+	location: '<input id="location"/>'
+}, {
+	onSelect: function(elements, value) {
+		['lat', 'lng', 'city'].each(function(prop) {
+			$('form_' + prop).set('value', value[prop].toLowerCase().capitalize());
+		});
+	},
+	onDeselect: function(elements) {
+		['lat', 'lng', 'city'].each(function(prop) {
+			$('form_' + prop).set('value', '');
+		});
+	}
+});
+			</pre>
+		</code>
 		
 		<script type="text/javascript">
 		//<![CDATA[
-			var geopleter = new Meio.Autocomplete.Geo('form_school', {
-				region: 'fr',
-				location: new google.maps.LatLng(43.62028086118892, 7.043044841527948)
+			/*Autocompleter*/
+			var DEFAULT_LOCATION = 'Paris, France';
+			var geocompleter = new Meio.Autocomplete.Geo('form_est', {
+				location: DEFAULT_LOCATION
 			}, {
-				delay: 100,
-				maxVisibleItems: 4,
 				onSelect: function(elements, value) {
 					['lat', 'lng', 'city'].each(function(prop) {
 						$('form_' + prop).set('value', value[prop].toLowerCase().capitalize());
@@ -65,6 +81,20 @@
 						$('form_' + prop).set('value', '');
 					});
 				}
+			});
+		//]]>
+		</script>
+		
+		<script type="text/javascript">
+		//<![CDATA[
+			/*Demo code. Don't use this!*/
+
+			$$('li input').each(function(input) {
+				input.getParent().grab(new Element('code', { html: '#' + input.get('id') }));
+			});
+			
+			$('location').set('value', DEFAULT_LOCATION).addEvent('keyup', function(e) {
+				geocompleter.setLocation($(e.target).get('value'));
 			});
 		//]]>
 		</script>
